<resources>
    <string name="app_name">AndroidBlueTooth</string>

    <string name="status_idle">未连接</string>
    <string name="action_scan">扫描设备</string>
    <string name="filter_hint">按设备名过滤</string>
    <string name="action_listen">等待连接</string>
    <string name="action_stop_listen">停止监听</string>
    <string name="action_disconnect">断开连接</string>
    <string name="received_label">收到的数据：</string>
    <string name="message_hint">输入要发送的内容</string>
    <string name="action_send">发送</string>
    <string name="action_open_classic_blue">经典蓝牙</string>
    <string name="action_open_ble">BLE 蓝牙</string>
</resources>